# gfx-cpp

./: .gitignore  CMakeLists.txt  compile_flags.txt  toolchain-mingw.cmake
glad/: glad.c
glad/include/glad/: glad.h
include/: Backend.hpp  Handle.hpp  IBuffer.hpp  IDevice.hpp  IImage.hpp  IMesh.hpp  IPipeline.hpp  IRenderer.hpp  IShader.hpp  PipelineDesc.hpp  PipelineState.hpp  Vertex.hpp  pch.hpp
include/backend/opengl/: BackendGL.hpp  Buffer.hpp  GLBackend.hpp  GLTypes.hpp  Map.hpp  Mesh.hpp  Pipeline.hpp  Shader.hpp
include/gfx/: Backend.hpp  BindGroup.hpp  BindGroupLayout.hpp  ColorTarget.hpp  Framebuffer.hpp  Handle.hpp  IBuffer.hpp  IDevice.hpp  IImage.hpp  IMesh.hpp  IShader.hpp  PipelineDesc.hpp  PipelineLayout.hpp  PipelineState.hpp  RenderPass.hpp  RenderPipeline.hpp  ResourceManager.hpp  Vertex.hpp
include/gfx/backend/opengl/: BackendGL.hpp  BindGroupLayout.hpp  Buffer.hpp  Framebuffer.hpp  Image.hpp  Map.hpp  Mesh.hpp  Pipeline.hpp  PipelineLayout.hpp  RenderPass.hpp  RenderPipeline.hpp  Shader.hpp
src/: Backend.cpp  main.cpp
src/backend /opengl/: BackendGL.cpp  Buffer.cpp  Map.cpp  Mesh.cpp
src/gfx/: Backend.cpp
src/gfx/backend/opengl/: BackendGL.cpp  BindGroupLayout.cpp  Buffer.cpp  Framebuffer.cpp  Map.cpp  Mesh.cpp  RenderPass.cpp  RenderPipeline.cpp  Shader.cpp
src/gfx/opengl/: BackendGL.cpp  Buffer.cpp  Image.cpp  Map.cpp  Mesh.cpp  RenderPass.cpp  RenderPipeline.cpp  Shader.cpp
